[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cone.ldap"
version = "1.1.0.dev0"
description = "LDAP integration for cone.app"
readme = "README.rst"
license = {text = "Simplified BSD"}
authors = [{name = "Cone Contributors", email = "dev@conestack.org"}]
classifiers = [
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dependencies = [
    "node.ext.ldap",
    "cone.ugm",
    "yafowil.widget.array",
    "yafowil.widget.dict",
    "yafowil.yaml",
]

[project.optional-dependencies]
test = [
    "lxml",
    "yafowil.yaml",
    "zope.testrunner",
]

[project.urls]
Homepage = "http://github.com/conestack/cone.ldap"

[tool.hatch.build.targets.sdist]
include = [
    "/etc",
    "/cfg",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cone"]

[tool.zest-releaser]
create-wheel = true
