[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "cone.ldap"
version = "1.1.0.dev0"
description = "LDAP integration for cone.app"
dynamic = ["readme"]
requires-python = ">=3.10"
license = {text = "Simplified BSD"}
authors = [{name = "Cone Contributors", email = "dev@conestack.org"}]
classifiers = [
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dependencies = [
    "node.ext.ldap>1.99",
    "cone.ugm>1.0.99,<2.0.0",
    "yafowil.widget.array>1.99",
    "yafowil.widget.dict>1.99",
    "yafowil.yaml>2.99"
]

[project.optional-dependencies]
test = [
    "cone.ugm[test]",
]

[project.urls]
Homepage = "http://github.com/conestack/cone.ldap"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.rst"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "CHANGES.rst"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "LICENSE.rst"

[tool.hatch.build.targets.sdist]
include = [
    "/etc",
    "/cfg",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cone"]

[tool.pytest.ini_options]
consider_namespace_packages = true
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.zest-releaser]
create-wheel = true
